# amorty

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-ci.yml
amorty/: __init__.py  __main__.py  date.py  loan.py  loan_format.py  utils.py
loan_calculator/: __main__.py  date.py  loan.py  loan_format.py  utils.py
tests/: test_amorty.py  test_annuity_loan.py  test_base_loan.py  test_date.py  test_straight_line_loan.py  test_utils.py
