[tool.poetry]
name = "loan-calculator"
version = "0.1.0"
description = ""
authors = ["Ilya <ilya.kramt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
holidays = "^0.11.2"
tabulate = "^0.8.9"
XlsxWriter = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
pep8-naming = "^0.12.1"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
loan = "loan_calculator.__main__:main"
